<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">
        <TextView
            android:id="@+id/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="32sp"
            android:paddingTop="10dp"
            android:text="@string/app_name"
            android:fontFamily="@font/alegreya_black_italic" />
        <TextView
            android:layout_width="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_name"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            android:paddingBottom="10dp"
            tools:text="1.0.0"
            android:id="@+id/about_version" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_version"
            android:gravity="center"
            android:textSize="14sp"
            android:padding="10dp"
            android:text="@string/about_description"
            android:id="@+id/about_description" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:text="@string/about_contacts"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_description"
            android:id="@+id/about_contacts"
            android:fontFamily="@font/alegreya_black_italic" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:contentDescription="@string/content_description_gplay"
            app:layout_constraintEnd_toStartOf="@+id/about_github"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_contacts"
            android:id="@+id/about_gplay"
            android:src="@drawable/ic_action_gplay" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:contentDescription="@string/content_description_github"
            app:layout_constraintBottom_toBottomOf="@id/about_gplay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/about_gplay"
            app:layout_constraintTop_toTopOf="@id/about_gplay"
            android:id="@+id/about_github"
            android:src="@drawable/ic_action_github" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:padding="10dp"
            android:text="@string/about_credits_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/about_credits_title"
            app:layout_constraintTop_toBottomOf="@id/about_gplay"
            android:fontFamily="fonts/Alegreya-BlackItalic.ttf" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/about_credits_title"
            android:id="@+id/about_credits"
            android:autoLink="web"
            android:textColorLink="@android:color/white"
            android:text="@string/about_credits" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>